--- a/src/main/resources/com/example/chat/chat-view.fxml
+++ b/src/main/resources/com/example/chat/chat-view.fxml
@@ -3,24 +3,26 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane fx:id="anchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chat.ChatController">
+<AnchorPane fx:id="anchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chat.ChatController">
    <children>
-      <Button id="fileButton" fx:id="chooseFileButton" layoutX="14.0" layoutY="122.0" mnemonicParsing="false" onMouseClicked="#chooseFile" prefHeight="35.0" prefWidth="101.0" text="Choose File" />
+      <TextField fx:id="showOpenPath" layoutX="211.0" layoutY="125.0" prefHeight="26.0" prefWidth="214.0" />
+      <Button id="fileButton" fx:id="chooseFileButton" layoutX="59.0" layoutY="121.0" mnemonicParsing="false" onMouseClicked="#chooseFile" prefHeight="35.0" prefWidth="101.0" text="Choose File" />
       <TextArea fx:id="textArea" layoutX="131.0" layoutY="122.0" prefHeight="17.0" prefWidth="254.0" visible="false" />
-      <Text fx:id="txt1" layoutX="120.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to ChatApp. " textAlignment="CENTER">
+      <Text fx:id="txt1" layoutX="170.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to ChatApp. " textAlignment="CENTER">
          <font>
             <Font size="16.0" />
          </font>
       </Text>
-      <Text fx:id="txt2" layoutX="60.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select the message file you would like to veiw." textAlignment="CENTER" />
-      <ScrollPane id="ScrollPane" fx:id="scrollPane" layoutX="14.0" layoutY="186.0" prefHeight="200.0" prefWidth="371.0" vvalue="1.0" AnchorPane.topAnchor="186.0">
+      <Text fx:id="txt2" layoutX="110.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select the message file you would like to veiw." textAlignment="CENTER" />
+      <ScrollPane id="ScrollPane" fx:id="scrollPane" layoutX="27.0" layoutY="189.0" prefHeight="270.0" prefWidth="442.0" vvalue="1.0">
          <content>
-            <TextFlow fx:id="flow" prefHeight="192.0" prefWidth="358.0" />
+            <TextFlow fx:id="flow" prefHeight="258.0" prefWidth="426.0" />
          </content>
       </ScrollPane>
    </children>
